[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klent-sdk"
version = "0.0.2a1"
description = "Klent SDK for Python — control layer for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Klent" }]
keywords = ["klent", "ai", "agents", "tools", "observability", "guardrails", "policy", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27,<1.0",
  "typing-extensions>=4.0",
]

[project.urls]
Homepage = "https://klent.dev"
Documentation = "https://klent.dev/docs"
Repository = "https://github.com/klentlabs/klent-sdk-python"
Issues = "https://github.com/klentlabs/klent-sdk-python/issues"

[project.optional-dependencies]
anthropic = [
  "anthropic>=0.40,<1.0",
]
dev = [
  "anthropic>=0.40,<1.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "respx>=0.22",
  "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["klent_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
